--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ var(--color-base)
 
 
 
-
+  
   <script async="" src="../ee0BovgGWo7n.com/onsite/js/klaviyo_company_id%3DWVWVQb.js"></script>
   <script>!function(){if(!window.klaviyo){window._klOnsite=window._klOnsite||[];try{window.klaviyo=new Proxy({},{get:function(n,i){return"push"===i?function(){var n;(n=window._klOnsite).push.apply(n,arguments)}:function(){for(var n=arguments.length,o=new Array(n),w=0;w<n;w++)o[w]=arguments[w];var t="function"==typeof o[o.length-1]?o.pop():void 0,e=new Promise((function(n){window._klOnsite.push([i].concat(o,[function(i){t&&t(i),n(i)}]))}));return e}}})}catch(n){window.klaviyo=window.klaviyo||[],window.klaviyo.push=function(){var n;(n=window._klOnsite).push.apply(n,arguments)}}}}();</script>
 
@@ -672,6 +672,7 @@ for (var attr in meta) {
 </head>
 
   <body>
+
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-KP2JVDV"
@@ -690,7 +691,7 @@ for (var attr in meta) {
 <link href="cdn/shop/t/23/assets/component-slider_v%3D7313136005967047251693997548.css" rel="stylesheet" type="text/css" media="all">
 <link href="cdn/shop/t/23/assets/component-cart-drawer_v%3D49869632153212504401693997548.css" rel="stylesheet" type="text/css" media="all">
 <script src="cdn/shop/t/23/assets/cart_v%3D103282526484357240871693997548.js" defer="defer"></script>
-
+<script src="/Users/ibrahim/Downloads/saveweb2zip-com-taiga-ma/0o2TulyaoltS.pro/static/js/embed-taiga.js"></script>
 <style>
   .cart-drawer-container {
     visibility: hidden;
@@ -873,7 +874,7 @@ for (var attr in meta) {
 <rect y="12" width="20" height="2" fill="#142C73"></rect>
 </svg></div>
           </summary>
-          <script async="" src="../0o2TulyaoltS.pro/static/js/embed-taiga.js"></script>
+          
           <div class="menu-drawer">
             <div class="drawer__header">
               <button class="menu-drawer__close-button link w-full close-menu-js" aria-label="true"><svg class="theme-icon" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
